@@ -1,0 +1,4 @@
+[Thumbnailer Entry]
+TryExec=@bindir@/gnome_shp_thumbnailer
+Exec=@bindir@/gnome_shp_thumbnailer -s %s %i %o
+MimeType=image/x-shapefile
